fixed some glitches on ios (audio.play can throw errors here) and improved styling for my small iphone se.

--- a/simon_game.css
+++ b/simon_game.css
@@ -15,8 +15,8 @@ body {
   width: min(80vh, 80vw);
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 15px;
-  column-gap: 15px;
+  row-gap: 10px;
+  column-gap: 10px;
 }
 
 .button {
@@ -67,20 +67,19 @@ body {
   left: calc(50% - min(10vh, 10vw));
   border: 2px solid white;
   background-color: black;
+  aspect-ratio: 1;
   */
 
-  top: calc(50% - (min(20vh, 20vw) / 2) - 15px);
-  left: calc(50% - min(10vh, 10vw) - 15px);
-  border: 15px solid black;
+  top: calc(50% - (min(20vh, 20vw) / 2) - 10px);
+  left: calc(50% - min(10vh, 10vw) - 10px);
+  border: 10px solid black;
   background-color: #444;
 
   width: min(20vh, 20vw);
   line-height: min(20vh, 20vw);
-  font-size: clamp(0.4rem, 1.5vw, 1.2rem);
+  font-size: clamp(0.5rem, 3.0vw, 1.3rem);
   font-weight: bold;
   text-align: center;
-
-  aspect-ratio: 1;
   border-radius: 15px;
 }
 
